[228511] [model] WSDLParser creates lots of little objects when tracking location. Avoid using Integer.valueOf(int) because it conflicts with the compiler settings.